fix: use figure tag to wrap your img tag, end of line. fix #5

--- a/src/stylesheet/Layout/_header.scss
+++ b/src/stylesheet/Layout/_header.scss
@@ -70,6 +70,14 @@
             $height: px-to-vw-desktop(40)
           );
         }
+        img {
+              @include set_size($width: 100%,$height:100%);
+              object-fit: cover;
+              @include tablet {
+                @include desktop {
+                }
+              }
+        }
       }
 
       cursor: pointer;
@@ -86,6 +94,15 @@
 
         @include desktop {
           display: none;
+        }
+      }
+
+      img {
+        @include set_size($width: 100%,$height:100%);
+        object-fit: cover;
+        @include tablet {
+          @include desktop {
+          }
         }
       }
 
